--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "@types/pdfjs-dist": "^2.10.377",
     "pdfjs-dist": "^4.10.38",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
