feat: implement query random book and fetch book by isbn endpoint

--- a/server/package.json
+++ b/server/package.json
@@ -20,15 +20,13 @@
   },
   "dependencies": {
     "@dotenvx/dotenvx": "^1.35.0",
-    "@types/bcryptjs": "^2.4.6",
-    "axios": "^1.7.9",
-    "bcrypt": "^5.1.1",
-    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
     "express-session": "^1.18.1",
     "knex": "^2.5.1",
+    "node-cache": "^5.1.2",
     "nodemon": "^3.1.9",
     "pg": "^8.11.3"
   }
