--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@dotenvx/dotenvx": "^1.35.0",
+    "@supabase/supabase-js": "^2.48.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
