--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,9 @@
     "@mui/material": "^6.4.5",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-slot": "^1.1.2",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/supabase-js": "^2.48.1",
     "@tailwindcss/vite": "^4.0.6",
     "@types/pdfjs-dist": "^2.10.377",
     "class-variance-authority": "^0.7.1",
